--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
         <hr>
 
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= form_for(resource, as: resource_name, url: users_registrations_path) do |f| %>
         <div class="form-group row">
 
           <%= f.label :name, "", class: "col-md-5 col-form-label text-md-left" do %>
