--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="row w-75">
     <div class="col-5 offset-1">
-      <%= image_tag "/images/dummy.png", class: "w-100 img-fuild" %>
+      <%= image_tag "/dummy.png", class: "w-100 img-fuild" %>
     </div>
 
     <div class="col">
@@ -29,16 +29,9 @@
             <div class="col-sm-10">
               <%= f.number_field :quantity, min:1, value:1, class: "form-control w-25"%>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-7">
-              <%= f.submit "カートに追加", class: "btn samuraimart-submit-button w-100" do %>
-                <i class="fas fa-shopping-cart"></i>
-              <% end %>
-            </div>
             <div class="col-5">
-              <%= link_to "#", class: "btn samuraimart-favorite-button text-dark w-100" do %>
-                <i class="fa fa-heart"></i>お気に入り
+                <%= link_to favorite_product_path, class: "btn samuraimart-favorite-button text-favorite w-100" do %>
+                <i class="fa fa-heart"></i><%= current_user.likes?(@product) ? "お気に入り解除" : "お気に入り" %>
               <% end %>
             </div>
           </div>
@@ -53,7 +46,6 @@
     </div>
 
     <div class="offset-1 col-10">
-      <!-- レビューを実装する箇所になります -->
       <div class="row">
         <% @reviews.each do |review| %>
         <div class="offset-md-5 col-md-5">
@@ -62,16 +54,16 @@
         </div>
         <% end %>
       </div>
- 
+
       <% if user_signed_in? %>
-        <div class="row">
-          <div class="offset-md-5 col-md-5">
-            <%= form_with model: @review, url: product_reviews_path(@product) do |f| %>
-              <%= f.text_area :content, class: "form-control m-2" %>
-              <%= f.submit "レビューを追加" , class:"btn samuraimart-submit-button ml-2"%>
-            <% end %>
-          </div>
+      <div class="row">
+        <div class="offset-md-5 col-md-5">
+          <%= form_with model: @review, url: product_reviews_path(@product), local: true do |f| %>
+            <%= f.text_area :content, class: "form-control m-2" %>
+            <%= f.submit "レビューを追加" , class:"btn samuraimart-submit-button ml-2"%>
+          <% end %>
         </div>
+      </div>
       <% end %>
     </div>
   </div>
