--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="row w-75">
     <div class="col-5 offset-1">
-      <%= image_tag "/dummy.png", class: "w-100 img-fuild" %>
+      <%= image_tag "/images/dummy.png", class: "w-100 img-fuild" %>
     </div>
 
     <div class="col">
@@ -29,8 +29,15 @@
             <div class="col-sm-10">
               <%= f.number_field :quantity, min:1, value:1, class: "form-control w-25"%>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-7">
+              <%= f.submit "カートに追加", class: "btn samuraimart-submit-button w-100" do %>
+                <i class="fas fa-shopping-cart"></i>
+              <% end %>
+            </div>
             <div class="col-5">
-                <%= link_to favorite_product_path, class: "btn samuraimart-favorite-button text-favorite w-100" do %>
+              <%= link_to favorite_product_path, class: "btn samuraimart-favorite-button text-favorite w-100" do %>
                 <i class="fa fa-heart"></i><%= current_user.likes?(@product) ? "お気に入り解除" : "お気に入り" %>
               <% end %>
             </div>
