--- a/app/assets/stylesheets/samuraimart.scss
+++ b/app/assets/stylesheets/samuraimart.scss
@@ -194,3 +194,11 @@ samuraimart-favorite-add-cart {
   border-radius: 2px;
   background-color: #0fbe9f;
 }
+
+.review-score-color {
+  color: #0fbe9f;
+}
+
+.review-score-color:focus {
+  color: #0fbe9f;
+}
