--- a/app/assets/stylesheets/samuraimart.scss
+++ b/app/assets/stylesheets/samuraimart.scss
@@ -237,3 +237,8 @@ samuraimart-favorite-add-cart {
   width: 80%!important;
 }
 
+.samuraimart-delete-submit-button {
+  border-radius: 2px;
+  background-color: #d94b0e;
+}
+
